# NeteaseMusicQt

./: CMakeLists.txt  LICENSE
cmake/: QtHelper.cmake  watchers.xml
src/: CMakeLists.txt
src/NeteaseComponents/: CMakeLists.txt  NMLabel.cpp  NMLabel.h  NeteaseComponentsGlobal.h
src/NeteaseGui/: CMakeLists.txt  MainFrm.cpp  MainFrm.h  MainFrm.ui  NavigationLogin.cpp  NavigationLogin.h  NavigationLogin.ui  NavigationUserWidget.cpp  NavigationUserWidget.h  NavigationUserWidget.ui  NavigationWidget.cpp  NavigationWidget.h  NavigationWidget.ui  NeteaseGuiGlobal.h
src/NeteaseMusic/: CMakeLists.txt  main.cpp  resources.qrc
src/NeteaseNetwork/: CMakeLists.txt  NetQRCode.cpp  NetQRCode.h  NeteaseNetworkGlobal.h  NetworkManager.cpp  NetworkManager.h
